--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yu-imgUpload",
-  "version": "0.0.2",
+  "name": "yu-img-upload",
+  "version": "1.0.1",
   "description": "a simple images upload plugin with preview",
   "main": "index.js",
   "scripts": {
@@ -47,7 +47,6 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "yu-popup": "^1.1.14"
   }
