--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "yu-img-upload",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "a simple images upload plugin with preview",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "cross-env NODE_ENV=devcelop PLATFORM=web webpack-dev-server",
-    "build": "cross-env NODE_ENV=production PLATFORM=web webpack",
-    "lib": "cross-env NODE_ENV=devcelop PLATFORM=web webpack --config webpack.publish.js"
+    "build": "cross-env NODE_ENV=production PLATFORM=web webpack && cross-env NODE_ENV=devcelop PLATFORM=web webpack --config webpack.publish.js"
   },
   "keywords": [
     "images",
